--- a/TheLifeOfPi.ipynb
+++ b/TheLifeOfPi.ipynb
@@ -1,8 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Estimating the value of Pi\n",
+    "\n",
+    "## 2 methods:\n",
+    "    - by plotting random points in the first quadrant\n",
+    "    - using Leibniz series"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +21,12 @@
     "import numpy as np\n",
     "import math\n",
     "\n",
-    "# Formula for our circle: x**2 + y**2 = 1\n"
+    "# Formula for our circle: x**2 + y**2 = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,16 +50,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,66 +80,69 @@
     "        if in_circ(rand_pair()):\n",
     "            in_circ_count += 1\n",
     "    return ((in_circ_count/precision)*4)\n",
-    "    "
+    "\n",
+    "# More concise but same idea\n",
+    "#def pi(prec):\n",
+    "    #return len([1 for _ in range(0, prec) if in_circ(rand_pair())]) * (4/prec)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Our Pi estimate is 3.141834 . The pecent error is 0.0076822948363754005 %.\n"
+      "Our Pi estimate is 3.1415204 . The pecent error is 0.002299903194338469 %.\n"
      ]
     }
    ],
    "source": [
-    "pi_estimate = pi(10000000)\n",
+    "number_of_points = 10000000\n",
+    "pi_estimate = pi(number_of_points)\n",
     "print(\"Our Pi estimate is\", pi_estimate,\".\", \"The pecent error is\", (abs((math.pi - pi_estimate)/math.pi)*100),\"%.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Leibniz(max):\n",
-    "    var = 0.0\n",
-    "    for x in range(1, max, 2):\n",
-    "        if \n",
-    "            var = var + 1/x\n",
-    "        elif: \n",
-    "            var = var - 1/x \n",
-    "    return var"
+    "def Leibniz(n):\n",
+    "    # 1 - (1/3) + (1/5) - (1/7)...\n",
+    "    quarter_pi = 0.0\n",
+    "    switch = True\n",
+    "    for x in range(1, n, 2):\n",
+    "        if switch:\n",
+    "            quarter_pi += 1/x\n",
+    "            # switch = False\n",
+    "        else:\n",
+    "            quarter_pi -= 1/x\n",
+    "            # switch = True\n",
+    "        switch = not switch\n",
+    "    return quarter_pi * 4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.0890591455550735\n"
+      "3.141392653591791\n"
      ]
     }
    ],
    "source": [
-    "print(Leibniz(1000))"
+    "number_of_terms = 10000\n",
+    "print(Leibniz(number_of_terms))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
